--- a/AndroidManager.Shell.Web/AndroidManager.Shell.Web/AndroidManager.Shell.Web.csproj
+++ b/AndroidManager.Shell.Web/AndroidManager.Shell.Web/AndroidManager.Shell.Web.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="webpack.config.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
@@ -17,6 +21,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AndroidManager.Business\AndroidManager.Business.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\config\" />
+    <Folder Include="wwwroot\dist\" />
   </ItemGroup>
 
 </Project>
